--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -3,3 +3,27 @@
   margin-bottom: 1rem;
   font-size: 2.4rem;
 }
+
+@media screen and (max-width:380px) {
+  .title {
+    text-align: center;
+    margin-bottom: 0.3rem;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width:430px) {
+  .title {
+    text-align: center;
+    margin-bottom: 0.4rem;
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width:770px) {
+  .title {
+    text-align: center;
+    margin-bottom: 0.5rem;
+    font-size: 2.5rem;
+  }
+}
