--- a/src/App.css
+++ b/src/App.css
@@ -30,33 +30,41 @@
 
 @media screen and (max-width:380px) {
   .container {
-    width: 70%;
+    min-width: 70%;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 2rem;
     border-radius: 0.5rem;
-    height: 150px;
+    min-height: 600px;
   }
 
   .countdown-container {
 
-    height: 150px;
+    height: 90px;
     gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+
   }
 }
 
 @media screen and (max-width:430px) {
   .container {
-    width: 60%;
+    min-width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 3rem;
+    padding: 2rem;
     border-radius: 0.6rem;
     height: 180px;
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 600px;
   }
 
   .countdown-container {
 
-    height: 180px;
-    gap: 1.2rem;
+    height: 80px;
+    gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -67,11 +75,14 @@
     padding: 3rem;
     border-radius: 0.6rem;
     height: 300px;
+    min-height: 600px;
   }
 
   .countdown-container {
 
     height: 300px;
     gap: 1.2rem;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
